[project]
name = "xpressaiapp"
version = "0.1.0"
description = "desktop app powered by xpress ai models"
authors = [
    {name = "christiankelechi",email = "kezechristian@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pyqt6 (>=6.9.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
packages = [{ include = "xpressaiapp" }] 